--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,10 @@ buildscript {
     repositories {
         google()
         jcenter()
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.2.2'
+        classpath 'com.android.tools.build:gradle:7.0.0'
         classpath 'com.google.gms:google-services:4.3.8'
 
 
@@ -18,9 +19,8 @@ allprojects {
     repositories {
         google()
         jcenter()
-        maven {
-            url "http://jitpack.io"
-        }
+        mavenCentral()
+        //maven { url 'http://jitpack.io' }
     }
 }
 
